[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/main_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/game_title.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/TextureRectWithCenteredPivot.gd" type="Script" id=4]
[ext_resource path="res://ui_theme/custom_theme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/VTKS ANIMAL 2.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background:margin_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 25.5, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:margin_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 12.7, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:margin_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 43.7, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:margin_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 33.7, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "startup"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("GameTitle:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameTitle:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 2.14355 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/idle = SubResource( 1 )

[node name="GameTitle" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.25
anchor_top = 0.15
anchor_right = 0.75
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="StartupAnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/startup = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.25
anchor_top = 0.45
anchor_right = 0.75
anchor_bottom = 0.8
custom_constants/separation = 30

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 640.0
margin_bottom = 64.0
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_top = 94.0
margin_right = 640.0
margin_bottom = 158.0
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="ExitButton" type="Button" parent="Buttons"]
margin_top = 188.0
margin_right = 640.0
margin_bottom = 252.0
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
